cmake_minimum_required(VERSION 2.8)

option( INSTALL_QCSF_PLUGIN "Check to install qCSF plugin" OFF )



# renc 
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG	"${CMAKE_BINARY_DIR}/bin/Debug")
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/Release")
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG	"${CMAKE_BINARY_DIR}/bin/Debug" )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin/Release")


if (INSTALL_QCSF_PLUGIN)

#CloudCompare 'CSF' plugin
project( QCSF_PLUGIN )

include( ../CMakePluginTpl.cmake )

endif()
